// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`any component: mount 1`] = `
.Styled(Link)-1 {
  color: palevioletred;
  font-weight: bold;
}

<div>
  <Link>
    <a>
      Unstyled, boring Link
    </a>
  </Link>
  <br />
  <Styled(Link)>
    <Link
      className="Styled(Link)-1"
    >
      <a
        className="Styled(Link)-1"
      >
        Styled, exciting Link
      </a>
    </Link>
  </Styled(Link)>
</div>
`;

exports[`any component: react-test-renderer 1`] = `
.c {
  color: palevioletred;
  font-weight: bold;
}

<div>
  <a
    className={undefined}
  >
    Unstyled, boring Link
  </a>
  <br />
  <a
    className="c"
  >
    Styled, exciting Link
  </a>
</div>
`;

exports[`any component: shallow 1`] = `
<div>
  <Link>
    Unstyled, boring Link
  </Link>
  <br />
  <Styled(Link)>
    Styled, exciting Link
  </Styled(Link)>
</div>
`;

exports[`attaching additional props: mount 1`] = `
.styled.div-2 {
  color: red;
}

<styled.div>
  <div
    className="div styled.div-2"
  />
</styled.div>
`;

exports[`attaching additional props: react-test-renderer 1`] = `
.c {
  color: red;
}

<div
  className="div c"
/>
`;

exports[`attaching additional props: shallow 1`] = `
.c {
  color: red;
}

<div
  className="div c"
/>
`;

exports[`basic: mount 1`] = `
.styled.section-1 {
  padding: 4em;
  background: papayawhip;
}

.styled.h1-1 {
  font-size: 1.5em;
  text-align: center;
  color: palevioletred;
}

<styled.section>
  <section
    className="styled.section-1"
  >
    <styled.h1>
      <h1
        className="styled.h1-1"
      >
        Hello World, this is my first styled component!
      </h1>
    </styled.h1>
  </section>
</styled.section>
`;

exports[`basic: react-test-renderer 1`] = `
.c {
  padding: 4em;
  background: papayawhip;
}

.c-1 {
  font-size: 1.5em;
  text-align: center;
  color: palevioletred;
}

<section
  className="c"
>
  <h1
    className="c-1"
  >
    Hello World, this is my first styled component!
  </h1>
</section>
`;

exports[`basic: shallow 1`] = `
.c {
  padding: 4em;
  background: papayawhip;
}

<section
  className="c"
>
  <styled.h1>
    Hello World, this is my first styled component!
  </styled.h1>
</section>
`;

exports[`duplicated components: mount 1`] = `
.styled.div-1 {
  color: red;
}

.styled.div-1-1 {
  color: green;
}

<div>
  <styled.div>
    <div
      className="styled.div-1"
    />
  </styled.div>
   
  <styled.div>
    <div
      className="styled.div-1"
    />
  </styled.div>
   
  <styled.div>
    <div
      className="styled.div-1-1"
    />
  </styled.div>
</div>
`;

exports[`duplicated components: react-test-renderer 1`] = `
.c {
  color: red;
}

.c-1 {
  color: green;
}

<div>
  <div
    className="c"
  />
   
  <div
    className="c"
  />
   
  <div
    className="c-1"
  />
</div>
`;

exports[`duplicated components: shallow 1`] = `
<div>
  <styled.div />
   
  <styled.div />
   
  <styled.div />
</div>
`;

exports[`empty style: mount 1`] = `
<styled.div>
  <div
    className=""
  />
</styled.div>
`;

exports[`empty style: react-test-renderer 1`] = `
<div
  className=""
/>
`;

exports[`empty style: shallow 1`] = `
<div
  className=""
/>
`;

exports[`extending styles: mount 1`] = `
.styled.button-1 {
  color: palevioletred;
  font-size: 1em;
  margin: 1em;
  padding: 0.25em 1em;
  border: 2px solid palevioletred;
  border-radius: 3px;
}

.styled.button-1-1 {
  color: palevioletred;
  font-size: 1em;
  margin: 1em;
  padding: 0.25em 1em;
  border: 2px solid palevioletred;
  border-radius: 3px;
  color: tomato;
  border-color: tomato;
}

<div>
  <styled.button>
    <button
      className="styled.button-1"
    >
      Normal Button
    </button>
  </styled.button>
  <styled.button>
    <button
      className="styled.button-1-1"
    >
      Tomato Button
    </button>
  </styled.button>
</div>
`;

exports[`extending styles: react-test-renderer 1`] = `
.c {
  color: palevioletred;
  font-size: 1em;
  margin: 1em;
  padding: 0.25em 1em;
  border: 2px solid palevioletred;
  border-radius: 3px;
}

.c-1 {
  color: palevioletred;
  font-size: 1em;
  margin: 1em;
  padding: 0.25em 1em;
  border: 2px solid palevioletred;
  border-radius: 3px;
  color: tomato;
  border-color: tomato;
}

<div>
  <button
    className="c"
  >
    Normal Button
  </button>
  <button
    className="c-1"
  >
    Tomato Button
  </button>
</div>
`;

exports[`extending styles: shallow 1`] = `
<div>
  <styled.button>
    Normal Button
  </styled.button>
  <styled.button>
    Tomato Button
  </styled.button>
</div>
`;

exports[`included class name: mount 1`] = `
.styled.div-2 {
  color: red;
}

<styled.div>
  <div
    className="i styled.div-2"
  />
</styled.div>
`;

exports[`included class name: react-test-renderer 1`] = `
.c {
  color: red;
}

<div
  className="i c"
/>
`;

exports[`included class name: shallow 1`] = `
.c {
  color: red;
}

<div
  className="i c"
/>
`;

exports[`leading white spaces: mount 1`] = `
<Div>
  <div
    className="  div"
  />
</Div>
`;

exports[`leading white spaces: react-test-renderer 1`] = `
<div
  className="  div"
/>
`;

exports[`leading white spaces: shallow 1`] = `
<div
  className="  div"
/>
`;

exports[`named  components: mount 1`] = `
.ANamed-1 {
  color: red;
}

.BNamed-1 {
  color: green;
}

<div>
  <ANamed>
    <div
      className="ANamed-1"
    />
  </ANamed>
   
  <BNamed>
    <div
      className="BNamed-1"
    />
  </BNamed>
</div>
`;

exports[`named  components: react-test-renderer 1`] = `
.c {
  color: red;
}

.c-1 {
  color: green;
}

<div>
  <div
    className="c"
  />
   
  <div
    className="c-1"
  />
</div>
`;

exports[`named  components: shallow 1`] = `
<div>
  <ANamed />
   
  <BNamed />
</div>
`;

exports[`non-styled: mount 1`] = `<div />`;

exports[`non-styled: react-test-renderer 1`] = `<div />`;

exports[`non-styled: shallow 1`] = `<div />`;

exports[`null 1`] = `null`;

exports[`referring to other components: mount 1`] = `
.styled.a-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 5px 10px;
  background: papayawhip;
  color: palevioletred;
}

.styled.svg-1 {
  -webkit-transition: fill 0.25s;
  transition: fill 0.25s;
  width: 48px;
  height: 48px;
}

.styled.a-0:hover .styled.svg-1 {
  fill: rebeccapurple;
}

.styled.span-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 1.2;
}

.styled.span-1::before {
  content: '◀';
  margin: 0 10px;
}

<styled.a
  href="#"
>
  <a
    className="styled.a-0 styled.a-1"
    href="#"
  >
    <styled.svg>
      <svg
        className="styled.svg-1"
      />
    </styled.svg>
    <styled.span>
      <span
        className="styled.span-1"
      >
        Hovering my parent changes my style!
      </span>
    </styled.span>
  </a>
</styled.a>
`;

exports[`referring to other components: react-test-renderer 1`] = `
.c-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 5px 10px;
  background: papayawhip;
  color: palevioletred;
}

.c-2 {
  -webkit-transition: fill 0.25s;
  transition: fill 0.25s;
  width: 48px;
  height: 48px;
}

.c:hover .c-2 {
  fill: rebeccapurple;
}

.c-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  line-height: 1.2;
}

.c-3::before {
  content: '◀';
  margin: 0 10px;
}

<a
  className="c c-1"
  href="#"
>
  <svg
    className="c-2"
  />
  <span
    className="c-3"
  >
    Hovering my parent changes my style!
  </span>
</a>
`;

exports[`shallow with theme 1`] = `
.c {
  color: mediumseagreen;
}

<button
  className="c"
>
  Themed
</button>
`;

exports[`supported css: mount 1`] = `
.styled.div-1 {
  padding: 2em 1em;
  background: papayawhip;
}

.styled.div-1:hover {
  background: palevioletred;
}

.styled.div-1 > p {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

html.test .styled.div-1 {
  display: none;
}

@media (max-width:600px) {
  .styled.div-1 {
    background: tomato;
  }

  .styled.div-1:hover {
    background: yellow;
  }
}

<styled.div>
  <div
    className="styled.div-1"
  >
    <p>
      Hello World!
    </p>
  </div>
</styled.div>
`;

exports[`supported css: react-test-renderer 1`] = `
.c {
  padding: 2em 1em;
  background: papayawhip;
}

.c:hover {
  background: palevioletred;
}

.c > p {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

html.test .c {
  display: none;
}

@media (max-width:600px) {
  .c {
    background: tomato;
  }

  .c:hover {
    background: yellow;
  }
}

<div
  className="c"
>
  <p>
    Hello World!
  </p>
</div>
`;

exports[`supported css: shallow 1`] = `
.c {
  padding: 2em 1em;
  background: papayawhip;
}

.c:hover {
  background: palevioletred;
}

.c > p {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

html.test .c {
  display: none;
}

@media (max-width:600px) {
  .c {
    background: tomato;
  }

  .c:hover {
    background: yellow;
  }
}

<div
  className="c"
>
  <p>
    Hello World!
  </p>
</div>
`;

exports[`theming: mount 1`] = `
.styled.button-1 {
  font-size: 1em;
  margin: 1em;
  padding: 0.25em 1em;
  border-radius: 3px;
  color: palevioletred;
  border: 2px solid palevioletred;
}

.styled.button-1-1 {
  font-size: 1em;
  margin: 1em;
  padding: 0.25em 1em;
  border-radius: 3px;
  color: mediumseagreen;
  border: 2px solid mediumseagreen;
}

<div>
  <styled.button
    theme={
      Object {
        "main": "palevioletred",
      }
    }
  >
    <button
      className="styled.button-1"
    >
      Normal
    </button>
  </styled.button>
  <ThemeProvider
    theme={
      Object {
        "main": "mediumseagreen",
      }
    }
  >
    <styled.button
      theme={
        Object {
          "main": "palevioletred",
        }
      }
    >
      <button
        className="styled.button-1-1"
      >
        Themed
      </button>
    </styled.button>
  </ThemeProvider>
</div>
`;

exports[`theming: react-test-renderer 1`] = `
.c {
  font-size: 1em;
  margin: 1em;
  padding: 0.25em 1em;
  border-radius: 3px;
  color: palevioletred;
  border: 2px solid palevioletred;
}

.c-1 {
  font-size: 1em;
  margin: 1em;
  padding: 0.25em 1em;
  border-radius: 3px;
  color: mediumseagreen;
  border: 2px solid mediumseagreen;
}

<div>
  <button
    className="c"
  >
    Normal
  </button>
  <button
    className="c-1"
  >
    Themed
  </button>
</div>
`;

exports[`theming: shallow 1`] = `
<div>
  <styled.button
    theme={
      Object {
        "main": "palevioletred",
      }
    }
  >
    Normal
  </styled.button>
  <ThemeProvider
    theme={
      Object {
        "main": "mediumseagreen",
      }
    }
  >
    <styled.button
      theme={
        Object {
          "main": "palevioletred",
        }
      }
    >
      Themed
    </styled.button>
  </ThemeProvider>
</div>
`;

exports[`trailing white spaces: mount 1`] = `
.styled.div-2 {
  color: red;
}

<styled.div>
  <div
    className="div   styled.div-2"
  />
</styled.div>
`;

exports[`trailing white spaces: react-test-renderer 1`] = `
.c {
  color: red;
}

<div
  className="div   c"
/>
`;

exports[`trailing white spaces: shallow 1`] = `
.c {
  color: red;
}

<div
  className="div   c"
/>
`;
